--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script></script>
 </body>
 </html>
